--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Akira Ueda <ue@gol.com>"]
 edition = "2018"
 
 [dependencies]
-actix-web = "=4.0.0-beta.5"
-actix-http = "=3.0.0-beta.5"
-actix-service = "=2.0.0-beta.5"
+actix-web = "4.0.0-beta.6"
+actix-http = "3.0.0-beta.6"
+actix-service = "2.0.0"
